# TGBS_Base

./: .gitignore  README.md  environment.yml  notes.md  pyproject.toml  requirements.txt
aoi/: bio_corridor_aoi.geojson  corridor_aoi.geojson  corridor_aoi.kml  corridor_dissolved_aoi.geojson  corridor_exclusion.geojson  corridor_exclusion.kml  degraded_1_aoi.geojson  degraded_2_aoi.geojson  degraded_3_aoi.geojson  gogoni_aoi.geojson  gogoni_bounds.geojson  ks_rehab_blocks.gpkg  ks_rehab_bounds.geojson  ks_rehab_point.geojson  kwale_county.geojson  shimba_hills_aoi.geojson  shimba_hills_bounds.geojson
data/: buda_aoi.geojson  buda_bounds.geojson  degraded_1_aoi.geojson  degraded_2_aoi.geojson  ks_rehab_blocks.geojson  ks_rehab_blocks_2509_epsg_32737.gpkg
notebooks/: IUCN_protected_areas.ipynb  Sentinel2_SR.ipynb  Sentinel2_test.ipynb  baseline.ipynb  comparisons.ipynb  composites.ipynb  field_survey.ipynb  landscape_metrics.r  lanscape_metrics.ipynb  sentinel2_index_timeseries.ipynb
notebooks/ee_notebooks/: baseline_data.ipynb  chirps_precip.ipynb  composites.ipynb  lanscape_metrics.ipynb  site_aois.ipynb  spatial_change.ipynb
notebooks/plotting_notebooks/: baseline_plots.ipynb  disturbance_metrics_plots.ipynb  landscape_metrics_plots.ipynb  moisture_metrics_plots.ipynb  productivity_metrics_plots.ipynb  rainfall_plots.ipynb  table_inspect.ipynb  table_prep.ipynb  veg_cover_metrics_plots.ipynb
notes/: REPO_SUMMARY.md  spatial_change.md  spatial_change_output_interpretation.md
outputs/rasters/: kwale_canopy_height.tif  kwale_forest_loss.tif  (+2 more)
src/tgbs_rs/: io.py  (+15 more)
(+175 files in other folders)
